# key-vault

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.dev/: DIRECTIVES.md  PROMPT.md  ROADMAP.md
.dev/release/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
.github/workflows/: ci.yml
benches/: access_latency.rs  codex_overhead.rs  concurrent_access.rs  decoy_strategies.rs  fragment_strategies.rs  memory_overhead.rs  vault_bench.rs
docs/: API.md  ARCHITECTURE.md  HARDWARE.md  PERFORMANCE.md  PLATFORM-NOTES.md  SECURITY.md  STABILITY-1.0.md  TRANSFORMATION.md
docs/release/: v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v0.9.1.md  v1.0.0.md
examples/: dhat_hot_path.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_codex_involution.rs  fuzz_decoy_strategies.rs  fuzz_fragment_interleaved.rs  fuzz_fragment_layered.rs  fuzz_fragment_random.rs  fuzz_fragment_standard.rs  fuzz_vault_end_to_end.rs
src/: error.rs  handle.rs  lib.rs  metadata.rs  normalize.rs
src/audit/: log_audit.rs  mod.rs  no_audit.rs
src/codex/: dynamic.rs  identity.rs  mod.rs  static_codex.rs
src/decoy/: key_derived.rs  mod.rs  random.rs  self_reference.rs
src/fetcher/: env.rs  file.rs  keychain.rs  mod.rs  tpm.rs
src/fragment/: interleaved.rs  layered.rs  mod.rs  random.rs  standard.rs  util.rs
src/memory/: mod.rs  unix.rs  windows.rs
src/monitor/: composite.rs  log_monitor.rs  mod.rs  no_monitor.rs
src/tee/: mod.rs  x86_64.rs
src/vault/: mod.rs
tests/: fragment_roundtrip.rs  fragment_strategies.rs  mlock_verified.rs  proptest_invariants.rs  registry_concurrent.rs  smoke.rs  tee_detection.rs
