[package]
name = "key-vault"
version = "0.10.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0 OR MIT"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Enterprise-grade key management vault for Rust. 9-layer defense-in-depth: fragmentation, decoy bytes, codex transform, mlock + zeroize, constant-time ops, security monitoring. Pluggable key fetchers (TPM, keychain, file, env). Sub-microsecond access. REPS-compliant."

# 5-slot search optimization: vault, keys, encryption, secure, keychain
keywords = [
    "vault",
    "keys",
    "encryption",
    "secure",
    "keychain"
]

# 5 categories for discoverability
categories = [
    "cryptography",
    "authentication",
    "memory-management",
    "os",
    "api-bindings"
]

documentation = "https://docs.rs/key-vault"
repository    = "https://github.com/jamesgober/key-vault"
homepage      = "https://github.com/jamesgober/key-vault"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "key_vault"
path = "src/lib.rs"

[features]
# Default: maximum security on, performance-impacting layers off
default = ["std", "mlock", "zeroize", "fragment-standard", "decoy-self-ref"]

# Core
std = []                              # Standard library (default on)
mlock = []                            # Lock memory pages from swap (default on)
zeroize = ["dep:zeroize"]             # Zero on drop (default on)

# Key fetchers (pluggable sources)
fetcher-keychain = ["dep:keyring"]    # OS keychain (macOS, Windows, Linux)
fetcher-file = []                     # Encrypted file storage
fetcher-env = []                      # Environment variable
fetcher-tpm = []                      # TPM 2.0 hardware (post-1.0)
fetcher-all = ["fetcher-keychain", "fetcher-file", "fetcher-env"]

# Fragment strategies (key splicing/shuffling)
fragment-standard = []                # Variable chunks + self-ref decoy (default)
fragment-interleaved = []             # Interleaved bytes pattern
fragment-random = []                  # Non-contiguous random fragments
fragment-layered = []                 # Compose multiple strategies
fragment-all = ["fragment-standard", "fragment-interleaved", "fragment-random", "fragment-layered"]

# Decoy strategies (byte filler/nonsense generators)
decoy-random = []                     # Random bytes (weakest, fastest)
decoy-self-ref = []                   # Bytes derived from key itself (default)
decoy-key-derived = []                # Hash-derived bytes that match key entropy
decoy-all = ["decoy-random", "decoy-self-ref", "decoy-key-derived"]

# Layer 5: Codex transformation (byte swap layer)
codex = []                            # Enable Codex layer (opt-in, adds ~5-10ns per byte)
codex-dynamic = ["codex"]             # Per-vault randomized codex

# Layer 8: Security monitoring
monitor = []                          # Enable security event monitoring
monitor-tracing = ["monitor", "dep:tracing"]  # tracing crate integration

# Layer 9: Audit logging of key access
audit = []                            # Enable access audit logging

# TEE detection (no impact when no TEE present)
tee-detect = []                       # Detect TEE availability at startup

# Post-quantum marker (informational - 256-bit symmetric defaults)
post-quantum = []

# Convenience preset features
preset-balanced = ["std", "mlock", "zeroize", "fragment-standard", "decoy-self-ref"]
preset-paranoid = ["std", "mlock", "zeroize", "fragment-layered", "decoy-all", "codex", "monitor", "audit", "tee-detect"]
preset-fast = ["std", "fragment-standard", "decoy-random"]

[dependencies]
# Constant-time comparisons (security-critical)
subtle = "2.5"

# Lock-free read access to vault state
arc-swap = "1.7"

# Cryptographically secure RNG
getrandom = "0.2"
rand_core = "0.6"

# Cryptographic hashing for key normalization (BLAKE3 - fast, post-quantum safe)
blake3 = "1"

# Optional - secret zeroing on drop
zeroize = { version = "1.7", optional = true, features = ["derive"] }

# Optional - OS keychain integration
keyring = { version = "3", optional = true }

# Optional - tracing integration for monitor
tracing = { version = "0.1", optional = true }

# Unix syscall surface — mlock(2) / munlock(2) for memory page locking.
# Target-gated so Windows builds don't pick this up.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows syscall surface — VirtualLock / VirtualUnlock for memory page locking.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "access_latency"
harness = false

[[bench]]
name = "concurrent_access"
harness = false

[[bench]]
name = "fragment_strategies"
harness = false

[[bench]]
name = "decoy_strategies"
harness = false

[[bench]]
name = "codex_overhead"
harness = false

[[bench]]
name = "memory_overhead"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true